--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -20,27 +20,27 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
-        android:id="@+id/btnUserLogin"
+        android:id="@+id/btnGoToUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="173dp"
-        android:text="@string/need_a_drone"
+        android:text="@string/customer"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />
 
     <Button
-        android:id="@+id/btnPilotLogin"
+        android:id="@+id/btnGoToPilot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="39dp"
-        android:text="@string/have_a_drone"
+        android:text="@string/drone_pilot"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnUserLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/btnGoToUser" />
 
 </android.support.constraint.ConstraintLayout>
